<resources>
    <string name="app_name" translatable="false">Battery Lab</string>
    <string name="app_name_dev" translatable="false">Battery Lab Dev</string>
    <string name="charging">Charging</string>
    <string name="discharging">Discharging</string>
    <string name="full">Full</string>
    <string name="unknown">Unknown</string>
    <string name="overheat">Overheat</string>
    <string name="category_vibration">Vibration</string>
    <string name="category_advanced">Advanced</string>
    <string name="toast_power_connected">Power is connected!</string>
    <string name="toast_power_disconnected">Power is disconnected!</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="already_purchased">Already Purchased</string>
    <string name="appearance">Appearance</string>
    <string name="premium" translatable="false">Premium</string>
    <string name="sound_not_selected">Sound not selected</string>
    <string name="restore">Restore Purchase</string>
    <string name="all_features">All Features</string>
    <string name="already_purchased_sb">No need, already bought</string>
    <string name="jacktor_msg">I\'m waiting for you…</string>
    <string name="jacktor_msg_purchased">Thank you for upgrading to premium</string>
    <string name="temperature_title">Temperature</string>
    <string name="temperature" translatable="false">%1$s°C/%2$s°F</string>
    <string name="temperature_with_title">Temperature: %1$s°C/%2$s°F</string>
    <string name="health_title">Health</string>
    <string name="restore_purchases_success">Successfully restored</string>
    <string name="restore_purchases_not_found">Oops, No purchase found.</string>
    <string name="wait">Wait…</string>
    <string name="battery_status_title">Battery Status</string>
    <string name="plugged_type_title">Plugged Type</string>
    <string name="not_plugged">Not plugged</string>
    <string name="capacity_title">Capacity</string>
    <string name="power_monitor_title">Power Monitor</string>
    <string name="reset">RESET</string>
    <string name="category_sound">Sound</string>
    <string name="version">Version</string>
    <string name="dialog_button_close">Close</string>
    <string name="pref_power_connected_ac_sound_title">Select sound for AC</string>
    <string name="pref_power_connected_usb_sound_title">Select sound for USB</string>
    <string name="pref_power_disconnected_sound_title">Select sound for power is disconnected</string>
    <string name="pref_sound_delay_title">Sound delay</string>
    <string name="pref_enable_vibration_title">Enable vibration</string>
    <string name="pref_enable_vibration_smry">Vibrate when power is connected or disconnected</string>
    <string name="pref_show_toast_title">Show toast</string>
    <string name="pref_show_toast_smry">Show toast power is connected or disconnected</string>
    <string name="pref_vibration_duration_title">Vibration duration</string>
    <string name="pref_custom_vibration_duration_title">Custom vibration duration</string>
    <string name="pref_vibration_mode_title">Vibration mode</string>
    <string name="design_capacity">%1$s mAh</string>
    <string name="residual_capacity">Residual: %1$s mAh (%2$s)</string>
    <string name="current_capacity">Current: %1$s mAh</string>
    <string name="battery_wear">Wear: %1$s (%2$s mAh)</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="charge_current">Charging Current: %1$s mA</string>
    <string name="discharge_current">Discharge current: %1$s mA</string>
    <string name="voltage">Voltage: %1$s mV</string>
    <string name="instruction">Instruction</string>
    <string name="change_design_capacity">Change Design Capacity</string>
    <string name="change">Change</string>
    <string name="information">Information</string>
    <string name="battery_technology">Technology: %1$s</string>
    <string name="instruction_message" formatted="false">1.In order for the application to show the residual capacity, discharge the battery to 10% or lower and put the device on charge, while the service must be turned on.\n2.For a more accurate display of the remaining capacity, charge the device fully until \"Status: Charged\" is displayed.\n3.If charging occurs after reaching 100%, then this is normal. Modern devices continue to charge for some time after reaching 100%.\n4.If the design capacity is incorrect, change it in the application settings.\n5.If the current capacity and/or charge/discharge current and/or voltage is not displayed correctly, then change the unit in the application settings.\n\n</string>
    <string name="instruction_message_enable_fast_charge_option">If you charge your device with fast charging, enable the \"Fast Charge\" option in the app settings to more correctly calculate battery wear\n\n</string>
    <string name="instruction_message_do_not_kill_the_service">ATTENTION! Do not kill the service. If the shell of your device likes to \"kill\" applications, or completely \"kills\" applications when cleaning the most recently launched applications or when removing an application from the most recently launched applications, or you use power saving, add this application to all possible exceptions. If your firmware has an application startup setting, be sure to ensure that this application can start after loading the OS, if you want the application to start automatically after loading the OS.&#160;</string>
    <string name="instruction_message_dont_kill_my_app">If you don’t know what and where to configure so that the application is not \"killed\" by the system, use the \"Don\'t kill my app!\" Service by choosing the manufacturer of your device.\n\n</string>
    <string name="huawei_honor_information">ATTENTION! On Huawei &amp; Honor, the current capacity may not display correctly. Unfortunately nothing can be done about it</string>
    <string name="status">Status: %1$s</string>
    <string name="source_of_power" translatable="false">%1$s</string>
    <string name="not_charging">Not Charging</string>
    <string name="source_of_power_ac" translatable="false">AC</string>
    <string name="source_of_power_usb" translatable="false">USB</string>
    <string name="source_of_power_wireless" translatable="false">Wireless</string>
    <string name="battery_level" translatable="false">%1$s</string>
    <string name="battery_level_with_title">battery Level: %1$s</string>
    <string name="last_charge_time">Last Charge Time: %1$s (%2$s - %3$s)</string>
    <string name="service">Service</string>
    <string name="charging_time">Charging Time: %1$s</string>
    <string name="service_and_notification">Service &amp; Notification</string>
    <string name="misc">Misc</string>
    <string name="service_time">Service Time</string>
    <string name="capacity_added">Added: %1$s mAh (%2$s)</string>
    <string name="notification_priority">Notification Priority and Status Bar Icon</string>
    <string name="developer">Developer</string>
    <string name="build">Build</string>
    <string name="build_date">Build Date (GMT+7)</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="feedback">Feedback</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="email_copied">E-mail copied</string>
    <string name="auto_dark_mode">Auto Dark Mode</string>
    <string name="auto_dark_mode_summary">Turn on dark mode depending on the system</string>
    <string name="number_of_charges">Number of Charges: %1$d</string>
    <string name="debug">Debug</string>
    <string name="change_setting">Change Setting</string>
    <string name="pref_key">Key</string>
    <string name="pref_value">Value</string>
    <string name="enable_overlay">Enable Overlay</string>
    <string name="size">Size</string>
    <string name="opacity">Opacity</string>
    <string name="show_hide">Show/Hide</string>
    <string name="battery_level_overlay">Battery Level</string>
    <string name="number_of_charges_overlay">Number of Charges</string>
    <string name="number_of_cycles_overlay">Number of Cycles</string>
    <string name="charging_time_overlay">Charging Time</string>
    <string name="current_capacity_overlay">Current Capacity</string>
    <string name="capacity_added_overlay">Capacity Added</string>
    <string name="battery_health_android_overlay">Battery Health (Android)</string>
    <string name="residual_capacity_overlay">Residual Capacity</string>
    <string name="status_overlay">Status</string>
    <string name="source_of_power_overlay">Source of Power</string>
    <string name="charge_discharge_current_overlay">Charge/Discharge Current</string>
    <string name="max_charge_discharge_current_overlay">Maximum Charge/Discharge Current</string>
    <string name="average_charge_discharge_current_overlay">Average Charge/Discharge Current</string>
    <string name="min_charge_discharge_current_overlay">Minimum Charge/Discharge Current</string>
    <string name="temperature_overlay">Temperature</string>
    <string name="voltage_overlay">Voltage</string>
    <string name="last_charge_time_overlay">Last Charge Time</string>
    <string name="battery_wear_overlay">Battery Wear</string>
    <string name="text_style_overlay">Text Style</string>
    <string name="battery_is_fully_charged">Battery is fully charged</string>
    <string name="battery_is_charged">Battery is charged</string>
    <string name="battery_is_discharged">Battery is discharged</string>
    <string name="battery_level_charge_discharge">Battery Level</string>
    <string name="discharge">Discharge</string>
    <string name="bypass_dnd_mode">Bypass DND Mode</string>
    <string name="bypass_dnd_mode_summary">Use alarms</string>
    <string name="overheat_overcool">Overheat/Overcool</string>
    <string name="charging_time_remaining_overlay">Charging Time Remaining</string>
    <string name="remaining_battery_time_overlay">Remaining Battery Time</string>
    <string name="only_values">Only Values</string>
    <string name="overlay_text_color">Text Color</string>
    <string name="charging_current_limit_overlay">Charging Current Limit</string>
    <string name="screen_time_overlay">Screen Time</string>
    <string name="overcool">Overcool</string>
    <string name="overheat_overcool_degrees" translatable="false">%1$d°C/%2$s°F</string>
    <string name="number_of_cycles_android_overlay">Number of Cycles (Android)</string>
    <string name="history">History</string>
    <string name="export_notification_sounds">Export Notification Sounds</string>
    <string name="battery_is_discharged_voltage">Battery is Discharged (Voltage)</string>
    <string name="number_of_full_charges_overlay">Number of Full Charges</string>
    <string name="font_overlay">Font</string>
    <string name="maximum_temperature_overlay">Maximum Temperature</string>
    <string name="average_temperature_overlay">Average Temperature</string>
    <string name="minimum_temperature_overlay">Minimum Temperature</string>
    <string name="full_charge_reminder">Full Charge Reminder</string>
    <string name="full_charge_reminder_summary">Full charge reminder every 30 minutes</string>
    <string name="power_connection_service">Enable Power Connection</string>
    <string name="reset_sound">Reset Sound</string>
    <string name="check_update">Check Update</string>
    <string name="overlay_location">Location</string>
    <string name="full_charge_reminder_frequency">Full Charge Reminder Frequency</string>
    <string name="fast_charge">Fast Charge</string>
    <string name="github" translatable="false">Github</string>
    <string name="license">License: Apache 2.0</string>
    <string name="become_a_beta_tester">Become a beta tester</string>
    <string name="become_a_beta_tester_summary">Be the first to receive updates</string>
    <string name="github_battery_capacity" translatable="false">Github (Battery Capacity)</string>
    <string name="tools">Tools</string>
</resources>