<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:key="battery_status_information_settings_pref_screen">

    <SwitchPreferenceCompat
            android:title="@string/bypass_dnd_mode"
            android:summary="@string/bypass_dnd_mode_summary"
            app:defaultValue="true"
            app:singleLineTitle="false"
            app:iconSpaceReserved="false"
            android:key="bypass_dnd_mode"/>

    <SwitchPreferenceCompat
            android:title="@string/overheat_overcool"
            app:singleLineTitle="false"
            app:iconSpaceReserved="false"
            android:key="notify_overheat_overcool"/>

    <SeekBarPreference
        android:title="@string/overheat"
        app:iconSpaceReserved="false"
        app:enabled="false"
        android:summary="@string/overheat_overcool_degrees"
        app:defaultValue="@integer/overheat_degrees_default"
        app:singleLineTitle="false"
        app:min="@integer/overheat_degrees_min"
        android:max="@integer/overheat_degrees_max"
        app:updatesContinuously="true"
        android:key="overheat_degrees"/>

    <SeekBarPreference
        android:title="@string/overcool"
        app:iconSpaceReserved="false"
        app:enabled="false"
        android:summary="@string/overheat_overcool_degrees"
        app:defaultValue="@integer/overcool_degrees_default"
        app:singleLineTitle="false"
        app:min="@integer/overcool_degrees_min"
        android:max="@integer/overcool_degrees_max"
        app:updatesContinuously="true"
        android:key="overcool_degrees"/>

    <SwitchPreferenceCompat
            android:title="@string/battery_is_fully_charged"
            app:singleLineTitle="false"
            app:iconSpaceReserved="false"
            android:key="notify_battery_is_fully_charged"/>

    <SwitchPreferenceCompat
        android:title="@string/full_charge_reminder"
        android:summary="@string/full_charge_reminder_summary"
        app:singleLineTitle="false"
        app:iconSpaceReserved="false"
        app:defaultValue="@bool/notify_full_charge_reminder_default_value"
        app:enabled="@bool/notify_full_charge_reminder_enabled"
        android:key="notify_full_charge_reminder"/>

    <ListPreference
        android:title="@string/full_charge_reminder_frequency"
        app:singleLineTitle="false"
        android:entries="@array/full_charge_reminder_frequency_list"
        android:entryValues="@array/full_charge_reminder_frequency_values"
        app:defaultValue="@integer/full_charge_reminder_frequency_default"
        app:iconSpaceReserved="false"
        app:enabled="@bool/notify_full_charge_reminder_frequency_enabled"
        android:key="full_charge_reminder_frequency"/>

    <SwitchPreferenceCompat
            android:title="@string/battery_is_charged"
            app:singleLineTitle="false"
            app:iconSpaceReserved="false"
            android:key="notify_battery_is_charged"/>

    <SeekBarPreference
            android:title="@string/battery_level_charge_discharge"
            app:iconSpaceReserved="false"
            app:enabled="false"
            android:summary="80%"
            app:defaultValue="@integer/battery_level_notify_charged"
            app:singleLineTitle="false"
            app:min="1"
            app:updatesContinuously="true"
            android:key="battery_level_notify_charged"/>

    <SwitchPreferenceCompat
            android:title="@string/battery_is_discharged"
            app:singleLineTitle="false"
            app:iconSpaceReserved="false"
            android:key="notify_battery_is_discharged"/>

    <SeekBarPreference
            android:title="@string/battery_level_charge_discharge"
            app:iconSpaceReserved="false"
            app:enabled="false"
            android:summary="20%"
            app:defaultValue="@integer/battery_level_notify_discharged"
            app:singleLineTitle="false"
            app:min="1"
            android:max="99"
            app:updatesContinuously="true"
            android:key="battery_level_notify_discharged"/>

    <SwitchPreferenceCompat
        android:title="@string/battery_is_discharged_voltage"
        app:defaultValue="@bool/notify_battery_is_discharged_voltage"
        app:singleLineTitle="false"
        app:iconSpaceReserved="false"
        android:key="notify_battery_is_discharged_voltage"/>

    <Preference
        android:title="@string/export_notification_sounds"
        app:singleLineTitle="false"
        app:iconSpaceReserved="false"
        android:key="export_notification_sounds"/>

</PreferenceScreen>