<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/charge_discharge_navigation"
            android:title="@string/discharge"
            android:icon="@drawable/ic_discharge_navigation_90_24dp"
            app:showAsAction="always"/>

    <item
        android:id="@+id/history_navigation"
        android:title="@string/history"
        android:icon="@drawable/ic_history_navigation_24"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/tools_navigation"
        android:title="@string/tools"
        android:icon="@drawable/ic_settings_kernel_24"
        app:showAsAction="always"/>

    <item
            android:id="@+id/settings_navigation"
            android:title="@string/settings"
            android:icon="@drawable/ic_settings_24"
            app:showAsAction="ifRoom"/>
</menu>